--- a/nov21.html
+++ b/nov21.html
@@ -232,8 +232,9 @@ d()
  /* using immediately invoked function */
  var d=(function(){
   var a=2
-  for(b=0;b<10;b++)
+  for(b=0;b<10;b++){
     console.log(a**b)
+  }
   return a,b;
    })()
 
