--- a/project 3/weather.html
+++ b/project 3/weather.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather forecast</title>
-    <link rel="stylesheet" href="./index1.css">
+    <link rel="stylesheet" href="./weather.css">
 </head>
 <body>
     
