--- a/project 3/weather.html
+++ b/project 3/weather.html
@@ -118,11 +118,11 @@
           const temperature = data.main.temp;
 
           if (temperature > 25) {
-            weatherIcon.src = "./New folder/sunny.png";
+            weatherIcon.src = "./sunny.png";
             card.style.backgroundImage =
               "url(https://i.pinimg.com/474x/d2/6e/34/d26e3479c5cee4c24c207bbc0c1e81d3.jpg)";
           } else if (temperature > 15) {
-            weatherIcon.src = "./New folder/cloudss.png";
+            weatherIcon.src = "./cloudss.png";
             card.style.backgroundImage =
               "url(https://i.pinimg.com/474x/82/fd/f4/82fdf4359b577df186008c03504f6d18.jpg)";
           } else {
