--- a/project 3/weather.html
+++ b/project 3/weather.html
@@ -120,11 +120,11 @@
           if (temperature > 25) {
             weatherIcon.src = "./sunny.png";
             card.style.backgroundImage =
-              "url(https://i.pinimg.com/474x/d2/6e/34/d26e3479c5cee4c24c207bbc0c1e81d3.jpg)";
+              "url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCgRofYEnFTsjYiPqA_OpxUnjz_PjbJ7eVPdAPZNM4ltsR2tqLbvSSzxdmimUZ1xYRR10&usqp=CAU)";
           } else if (temperature > 15) {
             weatherIcon.src = "./cloudss.png";
             card.style.backgroundImage =
-              "url(https://i.pinimg.com/474x/82/fd/f4/82fdf4359b577df186008c03504f6d18.jpg)";
+              "url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJG7I9yH0KjvHxmDuHFOEb2WXbVGDxbqCasA&usqp=CAU)";
           } else {
             weatherIcon.src = "./New folder/snow.png";
             card.style.backgroundImage =
