--- a/project 3/weather.html
+++ b/project 3/weather.html
@@ -119,12 +119,12 @@
           const temperature = data.main.temp;
 
           if (temperature > 25) {
-            weatherIcon.src = "./New folder/sunny.png";
+            weatherIcon.src = "./sunny.png";
             card.style.backgroundImage =
               // "url(https://i.pinimg.com/474x/d2/6e/34/d26e3479c5cee4c24c207bbc0c1e81d3.jpg)";
               "url( https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRCgRofYEnFTsjYiPqA_OpxUnjz_PjbJ7eVPdAPZNM4ltsR2tqLbvSSzxdmimUZ1xYRR10&usqp=CAU)";
           } else if (temperature > 15) {
-            weatherIcon.src = "./New folder/cloudss.png";
+            weatherIcon.src = "./cloudss.png";
             card.style.backgroundImage =
               "url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWUFog8kIbjnkQ_4dm8_LEZRXFY4RRM8x2YLcV8iQsNouS1JvntE6jYMPace8In9upwaM&usqp=CAU)";
           } else {
